# cosmwasm-custom-decimal

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
examples/: usage.rs
src/: error.rs  lib.rs  ops.rs  serde_impl.rs
tests/: integration_tests.rs
